--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,7 +19,7 @@
   <div class="form">
     <div class="create_account">
       <h1>Create your account</h1>
-      <form class="" action="#" method="post">
+      <form class="" action="/login" method="post">
         <input placeholder="Name" type="text" name="name" value=""><br>
         <input placeholder="Email" type="text" name="email" value=""><br>
         <input placeholder="Password" type="password" name="password" value=""><br>
