BDD post WIn !!!!

--- a/views/createSongs.hbs
+++ b/views/createSongs.hbs
@@ -8,7 +8,7 @@
 </header>
 
 <main>
-  <form class="#" action="index.html" method="post">
+  <form class="" action="" method="post">
     <div class="music">
       <input type="text" name="name" placeholder="Name" value="">
       <input type="text" name="producer" placeholder="Producer" value="">
