--- a/views/login.hbs
+++ b/views/login.hbs
@@ -23,7 +23,7 @@
         <input placeholder="Name" type="text" name="name" value=""><br>
         <input placeholder="Email" type="text" name="email" value=""><br>
         <input placeholder="Password" type="password" name="password" value=""><br>
-        <input placeholder="Confirm Password" type="password" name="confirm_password" value=""><br>
+        <input placeholder="Confirm Password" type="password" name="confirmPassword" value=""><br>
         <input class="button" type="submit" value="Create Account">
       </form>
     </div>
