--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,8 @@
   <nav>
     <img src="img/logo.svg" alt="Process logo">
     <ul>
-      <li><a href="/createSongs">Music</a></li>
-      <li><a href="#">Artist</a></li>
+      <li><a href="/createSongs">Create</a></li>
+      <li><a href="/musicPage">Music</a></li>
       <li><a href="/home">Home</a></li>
       <li><button type="button" name="button"><a href="/login">Login</a></button></li>
     </ul>
