--- a/views/music.hbs
+++ b/views/music.hbs
@@ -8,16 +8,78 @@
 </header>
 
 <main>
+
   <section class="info">
     <div class="cover">
-      <img src="http://placehold.it/250x250" alt="">
-      <h1>Name</h1>
-      <h2>Producteur</h2>
-      <p>Date</p>
+      <div class="img_info">
+        <img src="http://placehold.it/250x250" alt="">
+      </div>
+      <div>
+        <h1>Name</h1>
+        <h2>Producteur</h2>
+        <p>Date</p>
+      </div>
     </div>
-    <div class="bpm_tonality">
-      <p>Bpm</p>
+    <div class="info_info">
+      <p class="">Bpm</p>
       <p>Tonality</p>
     </div>
+  </section>
+
+  <section class="software">
+    <div class="soft_img">
+      <img src="http://placehold.it/150x150" alt="">
+    </div>
+    <div class="soft_info">
+      <h2>Ableton</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </section>
+
+  <section class="vst">
+    <div class="vst_a">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Soft</p>
+    </div>
+    <div class="vst_b">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Soft</p>
+    </div>
+    <div class="vst_c">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Soft</p>
+    </div>
+    <div class="vst_d">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Soft</p>
+    </div>
+  </section>
+
+  <div class="fx"></div>
+
+  <section class="hardware">
+    <div class="hard_a">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Hard</p>
+    </div>
+    <div class="hard_b">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Hard</p>
+    </div>
+    <div class="hard_c">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Hard</p>
+    </div>
+    <div class="hard_d">
+      <img src="http://placehold.it/200x150" alt="">
+      <p>Hard</p>
+    </div>
+  </section>
+
+  <div class="fx"></div>
+
+  <section class="process">
+
   </section>
 </main>
