--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,7 +7,7 @@ p {
 nav {
   height: 50px;
   width: 100%;
-  background-color: #343434;
+  background-color: #333;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -35,37 +35,39 @@ nav {
     display: none; } }
 
 section {
-  background-color: #343434; }
+  background-color: #333; }
   section h1 {
     color: #FFDE00;
     margin: 0;
     padding: 20px;
     text-align: center; }
-  section .bandUp {
-    height: 70px;
-    background-image: url("../img/bandUp.png");
-    background-repeat: round; }
-  section .bandDown {
-    height: 70px;
-    background-image: url("../img/bandDown.png");
-    background-repeat: round; }
   section .galery {
     margin-top: 30px;
-    background-color: #343434;
+    background-color: #333;
     padding-top: 30px;
     padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
-    section .galery img {
-      margin: 1px; }
-  section button {
-    display: flex;
-    text-align: center;
-    padding: 10px; }
+    section .galery .container {
+      position: relative;
+      padding: 0.3rem;
+      height: 300px;
+      width: 300px;
+      box-sizing: border-box; }
+      section .galery .container img {
+        width: 100%;
+        height: auto; }
+      section .galery .container .title {
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        margin: 5px;
+        padding: 0px 10px;
+        position: absolute;
+        bottom: 0; }
 
 .effect {
-  background-color: #343434; }
+  background-color: #333; }
   .effect .greyEffect {
     height: 10px;
     background-color: #8B8B8B; }
@@ -75,7 +77,7 @@ section {
     transform: rotate(2deg); }
 
 footer .black_f {
-  background-color: #343434;
+  background-color: #333;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; }
