--- a/public/sass/Component/Galery.scss
+++ b/public/sass/Component/Galery.scss
@@ -10,16 +10,6 @@ section{
     padding: 20px;
     text-align: center;
   }
-  .bandUp{
-    height: 70px;
-    background-image: url("../img/bandUp.png");
-    background-repeat:round;
-  }
-  .bandDown{
-    height: 70px;
-    background-image: url("../img/bandDown.png");
-    background-repeat:round;
-  }
   .galery{
     margin-top: 30px;
     background-color: $black;
@@ -28,14 +18,27 @@ section{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    img{
-      margin: 1px;
+    .container{
+      position: relative;
+      padding: 0.3rem;
+      height: 300px;
+      width: 300px;
+      box-sizing:border-box;
+
+      img{
+        width: 100%;
+        height: auto;
+      }
+
+      .title{
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        margin: 5px;
+        padding: 0px 10px;
+        position: absolute;
+        bottom: 0;
+      }
     }
-  }
-  button{
-    display: flex;
-    text-align: center;
-   padding: 10px;
   }
 }
 
