--- a/public/sass/Component/Music.scss
+++ b/public/sass/Component/Music.scss
@@ -4,7 +4,7 @@
 
 // ---- Info ---- //
 
-.info{
+.music{
   background-color: $grey;
   justify-content: space-between;
   display: flex;
@@ -53,9 +53,11 @@
     }
     img{
       margin: 10px;
+      height: 250px;
+      width: 400px;
     }
   }
-  
+
 // ---- fx ---- //
 
 .fx{
@@ -87,7 +89,13 @@
     }
     img{
       margin: 10px;
+      height: 250px;
+      width: 400px;
     }
   }
 
 // ---- process ---- //
+
+.process{
+  background: $grey;
+}
