New update (full)

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -5,3 +5,4 @@
 @import "Component/FirstView.scss";
 @import "Component/HomeSection.scss";
 @import "Component/Footer.scss";
+@import "Component/Fx.scss";
