--- a/views/index.hbs
+++ b/views/index.hbs
@@ -122,6 +122,6 @@
     </div>
   </div>
   <div class="yellow_f">
-    <p><a href="#">Legal imformation</a></p>
+    <p><a href="#">Legal information</a></p>
   </div>
 </footer>
