--- a/views/music.hbs
+++ b/views/music.hbs
@@ -28,10 +28,10 @@
 
   <section class="software">
     <div class="soft_img">
-      <img src="http://placehold.it/150x1" alt="">
+      <img src="{{software.img}}" alt="">
     </div>
     <div class="soft_info">
-      <h2>{{softwares.name}}</h2>
+      <h2>{{software.name}}</h2>
       <p>{{software.description}}</p>
     </div>
   </section>
@@ -81,6 +81,6 @@
     </div>
   </div>
   <div class="yellow_f">
-    <p><a href="#">Legal imformation</a></p>
+    <p><a href="#">Legal information</a></p>
   </div>
 </footer>
