--- a/public/css/login.css
+++ b/public/css/login.css
@@ -53,15 +53,6 @@ nav {
       margin: 8px 0;
       box-sizing: border-box; }
 
-.effect {
-  background-color: #333; }
-  .effect .blackEffect {
-    height: 10px;
-    background-color: #333; }
-  .effect .yellowEffect {
-    height: 10px;
-    background-color: #FFDE00; }
-
 footer .black_f {
   background-color: #333;
   display: flex;
@@ -105,3 +96,13 @@ footer .yellow_f {
     font-size: 0.7em;
     color: black;
     text-decoration: none; }
+
+.effect {
+  background-color: #333; }
+  .effect .greyEffect {
+    height: 10px;
+    background-color: #8B8B8B; }
+  .effect .yellowEffect {
+    height: 10px;
+    background-color: #FFDE00;
+    transform: rotate(4deg); }
