--- a/views/createSongs.hbs
+++ b/views/createSongs.hbs
@@ -108,6 +108,6 @@
     </div>
   </div>
   <div class="yellow_f">
-    <p><a href="#">Legal imformation</a></p>
+    <p><a href="#">Legal information</a></p>
   </div>
 </footer>
