--- a/views/login.hbs
+++ b/views/login.hbs
@@ -66,6 +66,6 @@
     </div>
   </div>
   <div class="yellow_f">
-    <p><a href="#">Legal imformation</a></p>
+    <p><a href="#">Legal information</a></p>
   </div>
 </footer>
