--- a/public/css/createSongs.css
+++ b/public/css/createSongs.css
@@ -34,59 +34,77 @@ nav {
   nav li {
     display: none; } }
 
-form {
-  background-color: #333; }
-  form .music {
+input {
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box; }
+
+.part_1 {
+  background-color: #8B8B8B;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .part_1 .base {
+    width: 400px;
+    padding: 0px 20px;
     display: flex;
-    flex-direction: column; }
-    form .music input {
-      margin: 5px;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border: 0; }
-  form .soft {
-    background-color: #FFDE00;
-    text-align: center;
-    margin: 20px;
-    padding: 20px; }
-    form .soft select {
-      background-color: #8B8B8B;
-      color: #FFDE00;
-      border: 0; }
-  form .list {
-    display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin: 20px; }
-    form .list .vst, form .list .hard {
-      margin-left: 20px;
-      margin-right: 20px; }
-    form .list p {
-      color: #FFDE00; }
-  form .process {
-    text-align: center; }
-    form .process h2 {
-      color: white;
-      display: flex;
-      align-items: center;
-      text-align: center; }
-    form .process img {
-      height: 50px; }
-    form .process textarea {
-      background-color: #FFDE00;
-      resize: none;
-      height: 300px;
-      width: 80%;
-      border: 0; }
-  form .submit {
-    padding: 20px;
-    display: flex;
     text-align: center;
+    margin: 10px; }
+    .part_1 .base textarea {
+      width: 395px;
+      height: 200px;
+      resize: none;
+      border: 0px; }
+    .part_1 .base .item {
+      text-align: center; }
+
+.software {
+  background-color: #333;
+  padding: 0px 20px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 10px; }
+  .software input {
+    margin: 20px 0px; }
+  .software textarea {
+    margin: 20px 0px; }
+  .software p {
+    color: #FFDE00; }
+
+.part_2 {
+  background-color: #333;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .part_2 .vst, .part_2 .hardware {
+    width: 400px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
     justify-content: center; }
-    form .submit input {
-      background-color: #FFDE00;
-      padding: 12px 200px;
-      margin: 8px 0;
-      border: 0; }
+    .part_2 .vst p, .part_2 .hardware p {
+      color: #FFDE00; }
+
+.part_3 {
+  background-color: #FFDE00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .part_3 .process {
+    text-align: center; }
+    .part_3 .process textarea {
+      background-color: #333;
+      width: 800px;
+      height: 200px;
+      resize: none;
+      border: 0px; }
 
 footer .black_f {
   background-color: #333;
@@ -131,3 +149,25 @@ footer .yellow_f {
     font-size: 0.7em;
     color: black;
     text-decoration: none; }
+
+.effect {
+  background-color: #333; }
+  .effect .greyEffect {
+    height: 10px;
+    background-color: #8B8B8B; }
+  .effect .yellowEffect {
+    height: 10px;
+    background-color: #FFDE00;
+    transform: rotate(4deg); }
+
+.line_yellow {
+  background-color: #FFDE00;
+  height: 10px; }
+
+.line_black {
+  background-color: #333;
+  height: 10px; }
+
+.line_grey {
+  background-color: #8B8B8B;
+  height: 10px; }
