--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,3 +131,15 @@ footer .yellow_f {
     height: 10px;
     background-color: #FFDE00;
     transform: rotate(4deg); }
+
+.line_yellow {
+  background-color: #FFDE00;
+  height: 10px; }
+
+.line_black {
+  background-color: #333;
+  height: 10px; }
+
+.line_grey {
+  background-color: #8B8B8B;
+  height: 10px; }
