--- a/public/sass/Component/CreateSongs.scss
+++ b/public/sass/Component/CreateSongs.scss
@@ -1,73 +1,164 @@
 // ---- Import ---- //
-
 @import "variable.scss";
-
 // -------- //
+// form{
+//   p{
+//     color: $yellow;
+//   }
+//   background-color: $black;
+//   .music{
+//     display: flex;
+//     flex-direction: column;
+//     input{
+//       margin: 5px;
+//       padding: 12px 20px;
+//       margin: 8px 0;
+//       border: 0;
+//     }
+//   }
+//   .soft{
+//     select{
+//       background-color: $grey;
+//       color: $yellow;
+//       border: 0;
+//     }
+//     background-color: $yellow;
+//     text-align: center;
+//     margin: 20px;
+//     padding: 20px;
+//   }
+//   .list{
+//     display: flex;
+//     justify-content: center;
+//     margin: 20px;
+//     .vst, .hard{
+//       margin-left: 20px;
+//       margin-right: 20px;
+//     }
+//   }
+//   .process{
+//     text-align: center;
+//     h2{
+//       color: white;
+//       display: flex;
+//       align-items: center;
+//       text-align: center;
+//     }
+//     img{
+//       height: 50px;
+//     }
+//     textarea{
+//       background-color: $yellow;
+//       resize: none;
+//       height: 300px;
+//       width: 80%;
+//       border: 0;
+//     }
+//   }
+//   .submit{
+//     padding: 20px;
+//     display: flex;
+//     text-align: center;
+//     justify-content: center;
+//     input{
+//       background-color: $yellow;
+//       padding: 12px 200px;
+//       margin: 8px 0;
+//       border: 0;
+//     }
+//   }
+// }
+// ---- unite ---- //
+input {
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+}
 
-form{
-  background-color: $black;
-  .music{
+// ---- page ---- //
+
+.part_1 {
+  background-color: $grey;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  .base {
+    width: 400px;
+    padding:0px 20px;
     display: flex;
     flex-direction: column;
-    input{
-      margin: 5px;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border: 0;
-    }
-  }
-  .soft{
-    select{
-      background-color: $grey;
-      color: $yellow;
-      border: 0;
-    }
-    background-color: $yellow;
-    text-align: center;
-    margin: 20px;
-    padding: 20px;
-  }
-  .list{
-    display: flex;
     justify-content: center;
-    margin: 20px;
-    .vst, .hard{
-      margin-left: 20px;
-      margin-right: 20px;
+    text-align: center;
+    margin: 10px;
+    textarea{
+      width: 395px;
+      height: 200px;
+      resize: none;
+      border: 0px;
+    }
+    .item {
+      text-align: center;
+    }
+    }
+  }
+  .software{
+    background-color: $black;
+    padding:0px 20px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 10px;
+    input{
+      margin: 20px 0px;
+    }
+    textarea{
+      margin: 20px 0px;
     }
     p{
       color: $yellow;
     }
-  }
-  .process{
-    text-align: center;
-    h2{
-      color: white;
-      display: flex;
-      align-items: center;
-      text-align: center;
-    }
-    img{
-      height: 50px;
-    }
-    textarea{
-      background-color: $yellow;
-      resize: none;
-      height: 300px;
-      width: 80%;
-      border: 0;
-    }
-  }
-  .submit{
-    padding: 20px;
+}
+
+
+.part_2 {
+  background-color: $black;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  .vst, .hardware {
+    width: 400px;
+    margin: 30px;
     display: flex;
-    text-align: center;
+    flex-direction: column;
     justify-content: center;
-    input{
-      background-color: $yellow;
-      padding: 12px 200px;
-      margin: 8px 0;
-      border: 0;
+    p{
+      color: $yellow;
     }
   }
 }
+
+
+.part_3 {
+  background-color: $yellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .process {
+    text-align: center;
+    textarea{
+      background-color: $black;
+      width: 800px;
+      height: 200px;
+      resize: none;
+      border: 0px;
+    }
+  }
+}
+
+// ==== FX ==== //
