--- a/public/sass/Component/Music.scss
+++ b/public/sass/Component/Music.scss
@@ -13,6 +13,10 @@
     display: flex;
     flex-wrap: wrap;
     margin: 10px;
+    img{
+      height: 300px;
+      width: auto;
+    }
   }
 }
 
@@ -33,30 +37,34 @@
 // ---- vst ---- //
 
 .vst{
+  background-color: $black;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
-  .vst_a, .vst_d{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: $black;
-    width: 50vw;
-  }
-    .vst_c, .vst_b{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      background-color: $grey;
-      width: 50vw;
-    }
+  justify-content: center;
+  .vst_item{
+    position: relative;
+    padding: 0.3rem;
+    height: 300px;
+    width: 450px;
+    box-sizing:border-box;
+
     img{
-      margin: 10px;
-      height: 250px;
-      width: 400px;
+      width: auto;
+      height: 300px;
+    }
+
+    .title{
+      background-color: rgba(0, 0, 0, 0.8);
+      color: white;
+      margin: 5px;
+      padding: 0px 10px;
+      position: absolute;
+      bottom: 0;
     }
   }
+}
 
 // ---- fx ---- //
 
@@ -69,30 +77,34 @@
 // ---- hardware ---- //
 
 .hardware{
+  background-color: $black;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
-  .hard_a, .hard_d{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: $black;
-    width: 50vw;
-  }
-    .hard_c, .hard_b{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      background-color: $grey;
-      width: 50vw;
-    }
+  justify-content: center;
+  .hardware_item{
+    position: relative;
+    padding: 0.3rem;
+    height: 300px;
+    width: 300px;
+    box-sizing:border-box;
+
     img{
-      margin: 10px;
-      height: 250px;
-      width: 400px;
+      width: auto;
+      height: 300px;
+    }
+
+    .title{
+      background-color: rgba(0, 0, 0, 0.8);
+      color: white;
+      margin: 5px;
+      padding: 0px 10px;
+      position: absolute;
+      bottom: 0;
     }
   }
+}
 
 // ---- process ---- //
 
