--- a/public/sass/createSongs.scss
+++ b/public/sass/createSongs.scss
@@ -4,3 +4,4 @@
 @import "Component/Nav.scss";
 @import "Component/CreateSongs.scss";
 @import "Component/Footer.scss";
+@import "Component/Fx.scss";
