--- a/views/createSongs.hbs
+++ b/views/createSongs.hbs
@@ -8,85 +8,213 @@
 </header>
 
 <main>
-  <form class="" action="" method="post">
+  <!-- <form class="" action="" method="post">
     <div class="music">
-      <input type="text" name="cover" placeholder="Youre cover URL" value="">
-      <input type="text" name="name" placeholder="Name" value="">
-      <input type="text" name="producer" placeholder="Producer" value="">
-      <input type="text" name="bpm" placeholder="BPM" value="">
-      <input type="text" name="tonality" placeholder="Tonality" value="">
+      <p>Your cover URL:</p>
+      <input type="text" name="cover" placeholder="https://geo-media.beatport.com/image/74a3ace6-5013-4699-84c8-72df800214e4.jpg" value="">
+      <p>Composition name:</p>
+      <input type="text" name="name" placeholder="RIGHT ABOUT" value="">
+      <p>Producer name:</p>
+      <input type="text" name="producer" placeholder="Bellecour" value="">
+      <p>BPM:</p>
+      <input type="number" name="bpm" placeholder="136" value="">
+      <p>Tonality:</p>
+      <input type="text" name="tonality" placeholder="F min" value="">
     </div>
+
     <div class="soft">
       <p>Software :</p>
+
       <select name="software">
-        {{#each software}}
-          <option>{{this.name}}</option>
-        {{/each}}
+        <div class="">
+          <input type="text" name="software_name" placeholder="Name" value="">
+          <textarea name="software_description" placeholder="Description"></textarea>
+          <input type="text" name="software_img" placeholder="URL picture" value="">
+        </div>
       </select>
+
+      <div class="list">
+
+        <div class="vst">
+
+          <p>vst n°1:</p>
+
+          <div name="vst">
+            <input type="text" name="vst_name_1" placeholder="Name" value="">
+            <input type="text" name="vst_img_1" placeholder="URL picture" value="">
+          </div>
+
+          <p>vst n°2:</p>
+
+          <div name="vst">
+            <input type="text" name="vst_name_2" placeholder="Name" value="">
+            <input type="text" name="vst_img_2" placeholder="URL picture" value="">
+          </div>
+
+          <p>vst n°3:</p>
+
+          <div name="vst">
+            <input type="text" name="vst_name_3" placeholder="Name" value="">
+            <input type="text" name="vst_img_3" placeholder="URL picture" value="">
+          </div>
+
+          <p>vst n°4:</p>
+
+          <div name="vst">
+            <input type="text" name="vst_name_4" placeholder="Name" value="">
+            <input type="text" name="vst_img_4" placeholder="URL picture" value="">
+          </div>
+
+        </div>
+
+        <div class="hard">
+
+          <p>hardware n°1:</p>
+
+          <div name="hardware">
+            <input type="text" name="hardware_name_1" placeholder="Name" value="">
+            <input type="text" name="hardware_img_1" placeholder="URL picture" value="">
+          </div>
+
+          <p>hardware n°2:</p>
+
+          <div name="hardware">
+            <input type="text" name="hardware_name_2" placeholder="Name" value="">
+            <input type="text" name="hardware_img_2" placeholder="URL picture" value="">
+          </div>
+
+          <p>hardware n°3:</p>
+
+          <div name="hardware">
+            <input type="text" name="hardware_name_3" placeholder="Name" value="">
+            <input type="text" name="hardware_img_3" placeholder="URL picture" value="">
+          </div>
+
+          <p>hardware n°4:</p>
+
+          <div name="hardware">
+            <input type="text" name="hardware_name_4" placeholder="Name" value="">
+            <input type="text" name="hardware_img_4" placeholder="URL picture" value="">
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="process">
+        <h2>Your <img src="img/logo.svg" alt=""></h2>
+        <textarea name="process" placeholder="Your process"></textarea>
+      </div>
+      <div class="submit">
+        <input type="submit" name="submit" value="Submit">
+      </div>
+  </form> -->
+
+  <form class="" action="" method="post">
+
+    <div class="part_1">
+
+      <div class="base">
+        <div class="item">
+          <p>Your cover URL:</p>
+          <input type="text" name="cover" placeholder="https://geo-media.beatport.com/image/74a3ace6-5013-4699-84c8-72df800214e4.jpg" value="">
+        </div>
+        <div class="item">
+          <p>Composition name:</p>
+          <input type="text" name="name" placeholder="RIGHT ABOUT" value="">
+        </div>
+        <div class="item">
+          <p>Producer name:</p>
+          <input type="text" name="producer" placeholder="Bellecour" value="">
+        </div>
+        <div class="item">
+          <p>BPM:</p>
+          <input type="number" name="bpm" placeholder="136" value="">
+        </div>
+        <div class="item">
+          <p>Tonality:</p>
+          <input type="text" name="tonality" placeholder="F min" value="">
+        </div>
+      </div>
+
+      <div class="software">
+        <p>Software (DAW)</p>
+        <input type="text" name="software_name" placeholder="Name" value="">
+        <input type="text" name="software_img" placeholder="URL picture" value="">
+        <textarea name="software_description" placeholder="Description"></textarea>
+      </div>
+
     </div>
-    <div class="list">
+
+    <div class="line_yellow"></div>
+
+    <div class="part_2">
+
       <div class="vst">
-        <p>vst n°1:</p>
-        <select name="vst">
-          {{#each vst}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>vst n°2:</p>
-        <select name="vst">
-          {{#each vst}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>vst n°3:</p>
-        <select name="vst">
-          {{#each vst}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>vst n°4:</p>
-        <select name="vst">
-          {{#each vst}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
+        <div class="item">
+          <p>vst n°1:</p>
+          <input type="text" name="vst_name_1" placeholder="Name" value="">
+          <input type="text" name="vst_img_1" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>vst n°2:</p>
+          <input type="text" name="vst_name_2" placeholder="Name" value="">
+          <input type="text" name="vst_img_2" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>vst n°3:</p>
+          <input type="text" name="vst_name_3" placeholder="Name" value="">
+          <input type="text" name="vst_img_3" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>vst n°4:</p>
+          <input type="text" name="vst_name_4" placeholder="Name" value="">
+          <input type="text" name="vst_img_4" placeholder="URL picture" value="">
+        </div>
       </div>
-      <div class="hard">
-        <p>hardware n°1:</p>
-        <select name="hardware">
-          {{#each hardware}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>hardware n°2:</p>
-        <select name="hardware">
-          {{#each hardware}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>hardware n°3:</p>
-        <select name="hardware">
-          {{#each hardware}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
-        <p>hardware n°4:</p>
-        <select name="hardware">
-          {{#each hardware}}
-            <option>{{this.name}}</option>
-          {{/each}}
-        </select>
+
+      <div class="hardware">
+        <div class="item">
+          <p>hardware n°1:</p>
+          <input type="text" name="hardware_name_1" placeholder="Name" value="">
+          <input type="text" name="hardware_img_1" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>hardware n°2:</p>
+          <input type="text" name="hardware_name_2" placeholder="Name" value="">
+          <input type="text" name="hardware_img_2" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>hardware n°3:</p>
+          <input type="text" name="hardware_name_3" placeholder="Name" value="">
+          <input type="text" name="hardware_img_3" placeholder="URL picture" value="">
+        </div>
+        <div class="item">
+          <p>hardware n°4:</p>
+          <input type="text" name="hardware_name_4" placeholder="Name" value="">
+          <input type="text" name="hardware_img_4" placeholder="URL picture" value="">
+        </div>
       </div>
+
     </div>
-    <div class="process">
-      <h2>Your <img src="img/logo.svg" alt=""></h2>
-      <textarea name="process" placeholder="Your process"></textarea>
-    </div>
-    <div class="submit">
-      <input type="submit" name="submit" value="Submit">
+
+<div class="line_grey"></div>
+
+    <div class="part_3">
+
+      <div class="process">
+        <p>Your Process</p>
+        <textarea name="process" placeholder="Your process"></textarea>
+      </div>
+      <div class="submit">
+        <input type="submit" name="submit" value="Submit">
+      </div>
+
     </div>
   </form>
 </main>
+
+
 
 <footer>
   <div class="black_f">
