--- a/public/sass/Component/masterSetting.scss
+++ b/public/sass/Component/masterSetting.scss
@@ -1,9 +1,10 @@
 // ---- Master setting ---- //
 
-*{
-  font-family: sans-serif;
-}
-
 p{
   font-weight: 250;
+}
+
+body{
+  margin: 0;
+  font-family: helvetica, sans-serif;
 }
