--- a/views/music.hbs
+++ b/views/music.hbs
@@ -12,7 +12,7 @@
     <div class="base">
       <div class="base-infos">
         <div class="cover">
-          <img src="{{music.cover}}" alt="">
+          <img src="{{music.cover}}" alt="Cover">
         </div>
         <div class="text">
           <h1>{{music.producer}}</h1>
